--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
 
 <body>
     <div class="container">
-        <div class="main__cup">
-            <div class="main__cup__fill">Abubakar</div>
+        <div id="main__cup" class="main__cup">
+            <div id="main__cup__fill" class="main__cup__fill">Filled</div>
+            <div id="main__cup__empty" class="main__cup__empty">Empty</div>
+
         </div>
         <ul class="cups" id="cups">
             <li data-index="1" class="cup">250ml</li>
@@ -24,6 +26,7 @@
             <li data-index="8" class="cup">250ml</li>
         </ul>
     </div>
+    <script src="index.js"></script>
 </body>
 
 </html>
