border chngd for main__cup

--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
 
 <body>
     <div class="container">
+        <h2>Drink water</h2>
         <div id="main__cup" class="main__cup">
             <div id="main__cup__fill" class="main__cup__fill">Filled</div>
             <div id="main__cup__empty" class="main__cup__empty">Empty</div>
 
         </div>
+        <h3>Select how many glasses of water that you have drank.</h3>
         <ul class="cups" id="cups">
             <li data-index="1" class="cup">250ml</li>
             <li data-index="2" class="cup">250ml</li>
